fixed merge conflicts with Rajat

--- a/food/templates/insert.html
+++ b/food/templates/insert.html
@@ -78,7 +78,8 @@
 				{% endif %}
 				<br>
 				<br>
-				<a href="/logout/">Logout</a> | <a href="{% url 'food.views.viewUserProfile' user_id=userId %}">Profile</a> | <a href="{% url 'food.views.viewMessages' %}">Messages</a>		
+				<a href="/logout/">Logout</a> | 
+				<!-- <a href="{% url 'food.views.viewUserProfile' event_id=userId %}">Profile</a> | <a href="{% url 'food.views.viewMessages' %}">Messages</a>	-->
 			</div>
 		</header>
 		</div>
