first draft of Tastypie API
implemented the skeleton of tastypie api

--- a/food/templates/index.html
+++ b/food/templates/index.html
@@ -36,8 +36,8 @@
 </form>
 {% endblock %}
 </div>
-<div class="facebookButtons">
-<a class="buttonFB" href="/facebookLogin/"><span></span>Login with Facebook</a>
+<!--<div class="facebookButtons">
+<a class="buttonFB" href="/facebookLogin/"><span></span>Login with Facebook</a>-->
 </div>
 {% if messages %}
 <div class="messages">
