--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -17,6 +17,7 @@
     position: relative;
     -moz-border-radius:    10px;
     -webkit-border-radius: 10px;
+-
     border-radius:         10px;
 }
 .niceform ul.errorlist li:before {
@@ -45,122 +46,47 @@ padding: 0.5em, 0 0.5em 0; list-style: none;
 .messages ul li { background: none; padding-left: 5px; padding-top: 8px; padding-bottom: 8px;font-size: 1.2em;}
 
 html {
-	margin: 0;
-	padding: 0;
-	}
-body { 
+  margin: 0;
+  padding: 0;
+  }
+body {
 
-	}
-p { 
-	margin-top: 0; 
-	text-align: justify;
-	}
-h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	margin-bottom: 0; 
-	color: #7D775C;
-	}
-a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #B7A5DF;
-	}
-a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #D4CDDC;
-	}
-a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-	}
-abbr {
-	border-bottom: none;
-	}
-
-.user_panel
-{
-	font-family: 'Montserrat', sans-serif;
-	font-size:100%;
-	text-align:justify;
-	margin-left:85%;
-	color: #7D775C;
-}
-
-/* specific divs */
-.page-wrapper { 
-	background: url(/site_media/img/banner3.jpg) no-repeat;
-	background-position:center;
-	width:100%;
-	}
-
-.intro { 
-	min-width: 470px;
-	width: 100%;
-	}
-
-h1 {
-	font-family: 'Montserrat', sans-serif;
-	font-size:1000%;
-	color: #7D775C;
-	text-align:center;
-}
-
-h2{
-	font-family: 'Montserrat', sans-serif;
-	font-size:200%;
-	text-align:center;
-	color: #7D775C;
-}
-
-	
-header h1 { 
-	/*background: transparent url(h1.gif) no-repeat top left;*/
-	margin-top: 10px;
-	display: block;
-	width: 219px;
-	height: 87px;
-	float: left;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header h2 { 
-	/*background: transparent url(h2.gif) no-repeat top left; */
-	margin-top: 58px; 
-	margin-bottom: 40px; 
-	width: 200px; 
-	height: 18px; 
-	float: right;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header {
-	padding-top: 20px;
-	height: 87px;
-}
-
-.summary {
-	position:absolute;
-	top: 25%;
+  }
+p {
+  margin-top: 0;
+  text-align: justify;
+  }
+h3 {
+  font: italic normal 1.4em georgia, sans-serif;
+  letter-spacing: 1px;
+  margin-bottom: 0;
+  color: #7D775C;
+  }
+a:link {
+  font-weight: bold;
+  text-decoration: none;
+  color: #B7A5DF;
+  }
+a:visited {
+  font-weight: bold;
+  text-decoration: none;
+  color: #D4CDDC;
+  }
+a:hover, a:focus, a:active {
     left: 30%;
-	width: 35%;
-	}
+  width: 35%;
+  }
 .summary p {
-	font: italic 1.1em/2.2 georgia; 
-	text-align: center;
-	}
-	
+  font: italic 1.1em/2.2 georgia;
+  text-align: center;
+  }
+
 .dashboardMenu
 {
 margin-left:20%;
 margin-top:6%;
 }
-	
+
 .createEvent {
 float:left;
 margin-top:-10%;
@@ -175,7 +101,7 @@ padding-bottom:1%;
 position:absolute;
 }
 .createEvent p {
-font: italic 1.1em/2.2 georgia; 
+font: italic 1.1em/2.2 georgia;
 text-align: right;
 }
 
@@ -186,7 +112,7 @@ left: 10%;
 width: 35%;
 }
 .allEvents p {
-font: italic 1.1em/2.2 georgia; 
+font: italic 1.1em/2.2 georgia;
 text-align: right;
 }
 
@@ -204,7 +130,7 @@ padding-top:1%;
 padding-bottom:1%;
 }
 .displayEvents p {
-font: italic 1.1em/2.2 georgia; 
+font: italic 1.1em/2.2 georgia;
 text-align: left;
 }
 
@@ -215,7 +141,7 @@ left: 60%;
 width: 35%;
 }
 .currentEvents p {
-font: italic 1.1em/2.2 georgia; 
+font: italic 1.1em/2.2 georgia;
 text-align: left;
 }
 
@@ -226,7 +152,7 @@ left: 20%;
 width: 35%;
 }
 .showCurrentEvents p {
-font: italic 1.1em/2.2 georgia; 
+font: italic 1.1em/2.2 georgia;
 text-align: left;
 }
 
@@ -237,7 +163,7 @@ left: 20%;
 width: 35%;
 }
 .viewEvent p {
-font: italic 1.1em/2.2 georgia; 
+font: italic 1.1em/2.2 georgia;
 text-align: left;
 }
 
@@ -251,7 +177,7 @@ border-width:1px;
 padding: 1% 1%;
 }
 .notifications p {
-font: italic 0.9em/2.2 georgia; 
+font: italic 0.9em/2.2 georgia;
 text-align: left;
 animation-name: blinker;
 animation-duration: 1s;
@@ -265,7 +191,7 @@ top: 12%;
 width: 100%;
 }
 .welcomeHeader p {
-font: italic 1.1em/2.2 georgia; 
+font: italic 1.1em/2.2 georgia;
 text-align: left;
 }
 
@@ -282,128 +208,53 @@ padding-top:2%;
 padding-bottom:2%;
 }
 .menu p {
-font: italic 1.1em/2.2 georgia; 
+font: italic 1.1em/2.2 georgia;
 text-align: left;
 }
 
 .preamble {
-	clear: right; 
-	padding: 0px 10px 0 10px;
-	}
-.supporting {	
-	padding-left: 10px; 
-	margin-bottom: 40px;
-	}
-	
+  clear: right;
+  padding: 0px 10px 0 10px;
+  }
+.supporting {
+  padding-left: 10px;
+  margin-bottom: 40px;
+  }
+
 .loginbox {
-	position:relative;
-	top: 52%;
-	left: 42%;
-	width:50%;
-}
-
-.loginParameters {
-	position:relative;
-	padding: 2px;
-}	
-
-.loginButtons {
-	float:left;
-	margin-top:1%;
-	margin-right:5%;
-}
-
-.registerButtons {
-	margin-top:1%;
-	margin-left:200%;
-}	
-
-.facebookButtons {
-	margin-top:5%;
-	margin-left:40%;
-}		
-	
-footer { 
-	text-align: center; 
-	}
-footer a:link, footer a:visited { 
-	margin-right: 20px; 
-	}
-
-.sidebar {
-	margin-left: 600px; 
-	position: absolute; 
-	top: 0; 
-	right: 0;
-	}
-.sidebar .wrapper { 
-	font: 10px verdana, sans-serif; 
-	background: transparent url(paper-bg.jpg) top left repeat-y; 
-	padding: 10px; 
-	margin-top: 150px; 
-	width: 130px; 
-	}
-.sidebar h3.select { 
-	background: transparent url(h3.gif) no-repeat top left; 
-	margin: 10px 0 5px 0; 
-	width: 97px; 
-	height: 16px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.archives { 
-	background: transparent url(h5.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:57px; 
-	height: 14px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.resources { 
-	background: transparent url(h6.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:63px; 
-	height: 10px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
+  position:relative;
+  }
 
 
 .sidebar ul {
-	margin: 0;
-	padding: 0;
-	}
+  margin: 0;
+  padding: 0;
+  }
 .sidebar li {
-	line-height: 1.3em; 
-	background: transparent url(cr1.gif) no-repeat top center; 
-	display: block; 
-	padding-top: 5px; 
-	margin-bottom: 5px;
-	list-style-type: none;
-	}
+  line-height: 1.3em;
+  background: transparent url(cr1.gif) no-repeat top center;
+  display: block;
+  padding-top: 5px;
+  margin-bottom: 5px;
+  list-style-type: none;
+  }
 .sidebar li a:link {
-	color: #988F5E;
-	}
+  color: #988F5E;
+  }
 .sidebar li a:visited {
-	color: #B3AE94;
-	}
+  color: #B3AE94;
+  }
 
 
 .extra1 {
-	background: transparent url(cr2.gif) top left no-repeat; 
-	position: absolute; 
-	top: 40px; 
-	right: 0; 
-	width: 148px; 
-	height: 110px;
-	}
-	
+  background: transparent url(cr2.gif) top left no-repeat;
+  position: absolute;
+  top: 40px;
+  right: 0;
+  width: 148px;
+  height: 110px;
+  }
+
 @font-face
 {
 font-family: caviar-font;
@@ -450,84 +301,84 @@ background-image: url('/site_media/img/validation.png');
 }
 
 .button {
-	-moz-box-shadow:inset 0px 1px 0px 0px #c1ed9c;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #c1ed9c;
-	box-shadow:inset 0px 1px 0px 0px #c1ed9c;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #9dce2c), color-stop(1, #8cb82b) );
-	background:-moz-linear-gradient( center top, #9dce2c 5%, #8cb82b 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#9dce2c', endColorstr='#8cb82b');
-	background-color:#9dce2c;
-	-webkit-border-top-left-radius:20px;
-	-moz-border-radius-topleft:20px;
-	border-top-left-radius:20px;
-	-webkit-border-top-right-radius:20px;
-	-moz-border-radius-topright:20px;
-	border-top-right-radius:20px;
-	-webkit-border-bottom-right-radius:20px;
-	-moz-border-radius-bottomright:20px;
-	border-bottom-right-radius:20px;
-	-webkit-border-bottom-left-radius:20px;
-	-moz-border-radius-bottomleft:20px;
-	border-bottom-left-radius:20px;
-	text-indent:0px;
-	border:1px solid #83c41a;
-	display:inline-block;
-	color:#ffffff;
-	font-family:Trebuchet MS;
-	font-size:14px;
-	font-weight:bold;
-	font-style:normal;
-	height:32px;
-	line-height:32px;
-	width:114px;
-	text-decoration:none;
-	text-align:center;
-	text-shadow:1px 1px 0px #689324;
+  -moz-box-shadow:inset 0px 1px 0px 0px #c1ed9c;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #c1ed9c;
+  box-shadow:inset 0px 1px 0px 0px #c1ed9c;
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #9dce2c), color-stop(1, #8cb82b) );
+  background:-moz-linear-gradient( center top, #9dce2c 5%, #8cb82b 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#9dce2c', endColorstr='#8cb82b');
+  background-color:#9dce2c;
+  -webkit-border-top-left-radius:20px;
+  -moz-border-radius-topleft:20px;
+  border-top-left-radius:20px;
+  -webkit-border-top-right-radius:20px;
+  -moz-border-radius-topright:20px;
+  border-top-right-radius:20px;
+  -webkit-border-bottom-right-radius:20px;
+  -moz-border-radius-bottomright:20px;
+  border-bottom-right-radius:20px;
+  -webkit-border-bottom-left-radius:20px;
+  -moz-border-radius-bottomleft:20px;
+  border-bottom-left-radius:20px;
+  text-indent:0px;
+  border:1px solid #83c41a;
+  display:inline-block;
+  color:#ffffff;
+  font-family:Trebuchet MS;
+  font-size:14px;
+  font-weight:bold;
+  font-style:normal;
+  height:32px;
+  line-height:32px;
+  width:114px;
+  text-decoration:none;
+  text-align:center;
+  text-shadow:1px 1px 0px #689324;
 }
 .button:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8cb82b), color-stop(1, #9dce2c) );
-	background:-moz-linear-gradient( center top, #8cb82b 5%, #9dce2c 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#8cb82b', endColorstr='#9dce2c');
-	background-color:#8cb82b;
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8cb82b), color-stop(1, #9dce2c) );
+  background:-moz-linear-gradient( center top, #8cb82b 5%, #9dce2c 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#8cb82b', endColorstr='#9dce2c');
+  background-color:#8cb82b;
 }.button:active {
-	position:relative;
-	top:1px;
+  position:relative;
+  top:1px;
 }
 
 .buttonFB {
-	-moz-box-shadow:inset 0px 1px 0px 0px #97c4fe;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #97c4fe;
-	box-shadow:inset 0px 1px 0px 0px #97c4fe;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #5e85d1), color-stop(1, #47649f) );
-	background:-moz-linear-gradient( center top, #5e85d1 5%, #47649f 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5e85d1', endColorstr='#47649f');
-	background-color:#5e85d1;
-	-webkit-border-top-left-radius:20px;
-	-moz-border-radius-topleft:20px;
-	border-top-left-radius:20px;
-	-webkit-border-top-right-radius:20px;
-	-moz-border-radius-topright:20px;
-	border-top-right-radius:20px;
-	-webkit-border-bottom-right-radius:20px;
-	-moz-border-radius-bottomright:20px;
-	border-bottom-right-radius:20px;
-	-webkit-border-bottom-left-radius:20px;
-	-moz-border-radius-bottomleft:20px;
-	border-bottom-left-radius:20px;
-	text-indent:0;
-	border:1px solid #337fed;
-	display:inline-block;
-	color:#ffffff;
-	font-family:Trebuchet MS;
-	font-size:15px;
-	font-weight:bold;
-	font-style:normal;
-	height:50px;
-	line-height:50px;
-	width:300px;
-	text-decoration:none;
-	text-align:center;
-	text-shadow:1px 1px 0px #1570cd;
+  -moz-box-shadow:inset 0px 1px 0px 0px #97c4fe;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #97c4fe;
+  box-shadow:inset 0px 1px 0px 0px #97c4fe;
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #5e85d1), color-stop(1, #47649f) );
+  background:-moz-linear-gradient( center top, #5e85d1 5%, #47649f 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5e85d1', endColorstr='#47649f');
+  background-color:#5e85d1;
+  -webkit-border-top-left-radius:20px;
+  -moz-border-radius-topleft:20px;
+  border-top-left-radius:20px;
+  -webkit-border-top-right-radius:20px;
+  -moz-border-radius-topright:20px;
+  border-top-right-radius:20px;
+  -webkit-border-bottom-right-radius:20px;
+  -moz-border-radius-bottomright:20px;
+  border-bottom-right-radius:20px;
+  -webkit-border-bottom-left-radius:20px;
+  -moz-border-radius-bottomleft:20px;
+  border-bottom-left-radius:20px;
+  text-indent:0;
+  border:1px solid #337fed;
+  display:inline-block;
+  color:#ffffff;
+  font-family:Trebuchet MS;
+  font-size:15px;
+  font-weight:bold;
+  font-style:normal;
+  height:50px;
+  line-height:50px;
+  width:300px;
+  text-decoration:none;
+  text-align:center;
+  text-shadow:1px 1px 0px #1570cd;
 }
 
 .buttonFB  span{
@@ -536,39 +387,39 @@ background: url('/site_media/img/facebook.png') no-repeat;
 }
 
 .buttonFB:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #47649f), color-stop(1, #5e85d1) );
-	background:-moz-linear-gradient( center top, #47649f 5%, #5e85d1 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#47649f', endColorstr='#5e85d1');
-	background-color:#47649f;
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #47649f), color-stop(1, #5e85d1) );
+  background:-moz-linear-gradient( center top, #47649f 5%, #5e85d1 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#47649f', endColorstr='#5e85d1');
+  background-color:#47649f;
 }.buttonFB:active {
-	position:relative;
-	top:1px;
+  position:relative;
+  top:1px;
 }
 
-#map { 
-	height: 23%; 
-	width: 23%; 
-	position:relative; 
-	margin-top:2%; 
-	margin-left:10%;
-	border-style:solid;
-	border-width:1px;
+#map {
+  height: 23%;
+  width: 23%;
+  position:relative;
+  margin-top:2%;
+  margin-left:10%;
+  border-style:solid;
+  border-width:1px;
 }
 
-.mapEvent{ 
-	height: 23%; 
-	width: 23%; 
-	position:relative; 
-	margin-top:10%; 
-	margin-left:50%;
+.mapEvent{
+  height: 23%;
+  width: 23%;
+  position:relative;
+  margin-top:10%;
+  margin-left:50%;
 }
 
-.profilePicture{ 
-	height: 23%; 
-	width: 23%; 
-	position:relative; 
-	margin-top:7%; 
-	margin-left:60%;
+.profilePicture{
+  height: 23%;
+  width: 23%;
+  position:relative;
+  margin-top:7%;
+  margin-left:60%;
 }
 
 .show_hide {
@@ -576,11 +427,11 @@ background: url('/site_media/img/facebook.png') no-repeat;
 }
 
 .blink_me {
-	position:relative;
-	float:left;
-	color:fireBrick;
-	font-size:70%;
-	 
+  position:relative;
+  float:left;
+  color:fireBrick;
+  font-size:70%;
+
     -webkit-animation-name: blinker;
     -webkit-animation-duration: 1s;
     -webkit-animation-timing-function: linear;
